js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-nested-imports.js
async
function
f
(
)
{
import
(
import
(
import
(
'
.
/
empty_FIXTURE
.
js
'
)
)
)
;
}
reportCompare
(
0
0
)
;
