js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
label
:
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
